--- a/src/Blitz.Rpc.HttpHelper/Blitz.Rpc.Client.Helper.csproj
+++ b/src/Blitz.Rpc.HttpHelper/Blitz.Rpc.Client.Helper.csproj
@@ -1,16 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <IncludeSymbols>true</IncludeSymbols>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blitz.Rpc.Client" Version="1.0.0" />
+    <PackageReference Include="Blitz.Rpc.Shared" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Blitz.Rpc.Client\Blitz.Rpc.Client.csproj" />
-    <ProjectReference Include="..\Blitz.Rpc.Shared\Blitz.Rpc.Shared.csproj" />
   </ItemGroup>
 
 </Project>
