--- a/src/Blitz.Rpc.Shared/Blitz.Rpc.Shared.csproj
+++ b/src/Blitz.Rpc.Shared/Blitz.Rpc.Shared.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeSymbols>true</IncludeSymbols>
+    <LangVersion>7.3</LangVersion>
     <Description>Shared stuff for Blitz.Rpc</Description>
-    <PackageLicenseUrl>https://github.com/petterek/Blitz.Rpc/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/petterek/Blitz.Rpc</PackageProjectUrl>
   </PropertyGroup>
 
