--- a/Test/Test.Server/Test.Server.csproj
+++ b/Test/Test.Server/Test.Server.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Blitz.Rpc.Server\Blitz.Rpc.HttpServer.csproj" />
+    <ProjectReference Include="..\..\src\Blitz.Rpc.Shared\Blitz.Rpc.Shared.csproj" />
   </ItemGroup>
 
 </Project>
