--- a/src/Blitz.Rpc.Shared/Blitz.Rpc.Shared.csproj
+++ b/src/Blitz.Rpc.Shared/Blitz.Rpc.Shared.csproj
@@ -7,6 +7,7 @@
     <LangVersion>7.3</LangVersion>
     <Description>Shared stuff for Blitz.Rpc</Description>
     <PackageProjectUrl>https://github.com/petterek/Blitz.Rpc</PackageProjectUrl>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
 </Project>
