--- a/src/Blitz.Rpc.Client/Blitz.Rpc.Client.csproj
+++ b/src/Blitz.Rpc.Client/Blitz.Rpc.Client.csproj
@@ -5,7 +5,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeSymbols>true</IncludeSymbols>
     <LangVersion>7.3</LangVersion>
-    <Version>2.0.1-alpha</Version>
+    <Version>2.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
