--- a/src/Blitz.Rpc.Server/Blitz.Rpc.HttpServer.csproj
+++ b/src/Blitz.Rpc.Server/Blitz.Rpc.HttpServer.csproj
@@ -7,8 +7,9 @@
     <LangVersion>7.3</LangVersion>
     <RepositoryType>GIT</RepositoryType>
     <RepositoryUrl>https://github.com/petterek/Blitz.Rpc</RepositoryUrl>
-    <PackageLicenseUrl>MIT</PackageLicenseUrl>
-    <Version>2.0.2</Version>
+    <PackageLicenseUrl></PackageLicenseUrl>
+    <Version>2.0.4</Version>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
