--- a/src/Blitz.Rpc.HttpHelper/Blitz.Rpc.Client.Helper.csproj
+++ b/src/Blitz.Rpc.HttpHelper/Blitz.Rpc.Client.Helper.csproj
@@ -17,9 +17,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blitz.Rpc.Client" Version="2.0.1" />
-    <PackageReference Include="Blitz.Rpc.Shared" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Blitz.Rpc.Client\Blitz.Rpc.Client.csproj" />
   </ItemGroup>
 
 </Project>
