--- a/src/Blitz.Rpc.Client/Blitz.Rpc.Client.csproj
+++ b/src/Blitz.Rpc.Client/Blitz.Rpc.Client.csproj
@@ -7,7 +7,15 @@
     <LangVersion>7.3</LangVersion>
     <Version>2.0.2</Version>
     <Authors>PEtter Ekrann</Authors>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Blitz.Rpc.Shared" Version="2.0.1" />
