--- a/src/Blitz.Rpc.Server/Blitz.Rpc.HttpServer.csproj
+++ b/src/Blitz.Rpc.Server/Blitz.Rpc.HttpServer.csproj
@@ -10,7 +10,15 @@
     <PackageLicenseUrl></PackageLicenseUrl>
     <Version>2.0.5</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Blitz.Rpc.Client" Version="2.0.2" />
